# soundDB

./: .gitignore  CONTRIBUTING.md  PREREQUISITES.md  README.md  cookbook.md  pyproject.toml  setup.py
scripts/: docs-commit.sh  wheels-commit.sh
soundDB/: __init__.py  accessor.py  accessor_old.py  parsers.py
