[tool]
[tool.poetry]
name = "soundDB"
version = "0.1.0"
description = "Query and load NSNSD acoustic data into Python, minimize pain"
license = "CC0 1.0"
homepage = "https://github.com/gjoseph92/soundDB"
authors = ["Gabe Joseph <gabriel_joseph@partner.nps.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
iyore = "*"
future = "*"
numpy = "*"
pandas = "*"
xarray = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
sphinx = {version = "^5", python = "^3.8"}

[[tool.poetry.source]]
name = "iyore"
url = "https://nationalparkservice.github.io/iyore/packages"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
